--- a/MegaTask/.gitignore
+++ b/MegaTask/.gitignore
@@ -1,2 +1,8 @@
 /data/
-/utils/
+/src/rnn.py
+/src/train_cnn.py
+/src/archive.zip
+/src/best_cnn_model.pth
+/src/best_model_metrics.txt
+/src/best_multimodal_model.pth
+archive.zip
